update to routing

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <button id="toggle-sidebar" class="mobile-toggle">☰</button>
   <div id="sidebar">
     <button id="download-json">Download JSON</button>
 
